Fixed react slick arrows, it was a css issue concerning poisition fixed with z-index

--- a/src/Components/Carousel/carousel-style.scss
+++ b/src/Components/Carousel/carousel-style.scss
@@ -6,4 +6,19 @@
     width: 100%;
     margin: auto;
   }
+  .slides {
+    position: relative;
+    .slick-prev,
+    .slick-next {
+      position: absolute;
+      top: 50%;
+    }
+    .slick-prev {
+      left: 5% !important;
+      z-index: 1;
+    }
+    .slick-next {
+      right: 5%;
+    }
+  }
 }
